# fastAPI-react-example-trello

./: .gitignore  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 09084e1d0864_task_index.py  14daf6eb91f3_delete_unique_dashboard_index.py  1b65e60ca824_dashboard.py  3463788ff5d5_dashboard.py  49e506464be8_model_fiele_story.py  595e5978eb77_initial.py  7892131b802a_rename_tablename_files.py  81d7a0167d8c_task.py  8a7b7b716a6e_user.py  97815251a163_task.py  acffc564bca4_rename_tablename_file.py  ae13cabeb27c_unique_responsibletask.py  b8d4e5d479c6_delete_project_description.py  c03e68c7ea02_change_user_model.py  c23c43cf1dbb_user___first_name__last_name.py  cd33e5775cac_projects.py
backend/app/: exceptions.py  main.py  settings.py
backend/app/authentication/: configuration.py  dependencies.py  manager.py  routers.py  schemas.py  utils.py
backend/app/dashboards/: __init__.py  models.py  routers.py  schemas.py  services.py
backend/app/database/: __init__.py  services.py  settings.py
backend/app/email/: services.py
backend/app/files/: __init__.py  models.py  routers.py  schemas.py  services.py
backend/app/projects/: __init__.py  models.py  routers.py  schemas.py  services.py
backend/app/stories/: __init__.py  models.py  routers.py  services.py
backend/app/tasks/: __init__.py  models.py  routers.py  schemas.py  services.py  utils.py
backend/app/users/: __init__.py  configuration.py  dependencies.py  manager.py  models.py  routers.py  schemas.py  services.py
frontend/: package-lock.json  package.json  (+1 more)
(+86 files in other folders)
